--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@types/jest": "^29.5.8",
     "@types/node": "^20.9.0",
     "@types/supertest": "^2.0.16",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.53.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "pino-pretty": "^10.2.3",
-    "prisma": "^5.5.2",
+    "prisma": "^5.6.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
@@ -34,11 +34,11 @@
   "dependencies": {
     "@fastify/mongodb": "^8.0.0",
     "@fastify/type-provider-typebox": "^3.5.0",
-    "@prisma/client": "5.5.2",
-    "@sinclair/typebox": "^0.31.23",
+    "@prisma/client": "5.6.0",
+    "@sinclair/typebox": "^0.31.24",
+    "argon2": "^0.31.2",
     "env-schema": "^5.2.1",
     "fastify": "^4.24.3",
-    "fastify-plugin": "^4.5.1",
-    "mongoose": "^8.0.0"
+    "fastify-plugin": "^4.5.1"
   }
 }
