--- a/package.json
+++ b/package.json
@@ -8,26 +8,24 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "lint": "eslint --fix src test",
-    "test": "jest"
+    "test": "tap"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.5.8",
+    "@tapjs/test": "^1.3.16",
+    "@tapjs/typescript": "^1.3.5",
     "@types/node": "^20.9.0",
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.53.0",
-    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "pino-pretty": "^10.2.3",
     "prisma": "^5.6.0",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
+    "tap": "^18.5.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
