--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "lint": "eslint --fix src test",
     "test": "tap"
   },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
-  },
   "devDependencies": {
     "@tapjs/test": "^1.3.16",
     "@tapjs/typescript": "^1.3.5",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20.9.0",
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
@@ -30,13 +28,16 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.1.0",
     "@fastify/mongodb": "^8.0.0",
     "@fastify/type-provider-typebox": "^3.5.0",
     "@prisma/client": "5.6.0",
     "@sinclair/typebox": "^0.31.24",
+    "@types/jsonwebtoken": "^9.0.5",
     "argon2": "^0.31.2",
     "env-schema": "^5.2.1",
     "fastify": "^4.24.3",
-    "fastify-plugin": "^4.5.1"
+    "fastify-plugin": "^4.5.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
